[emacs] Tweak koek-feed/visit

--- a/emacs.org
+++ b/emacs.org
@@ -6537,7 +6537,7 @@ Configure elfeed afterwards.
                (eww-mode)
                (eww (elfeed-entry-link entry)))
              buffer)))
-        (mapc #'pop-to-buffer-same-window)))
+        (mapc #'pop-to-buffer)))
 
     (defun koek-feed/visit-dwim ()
       "Visit selected entries in eww."
