--- a/README.org
+++ b/README.org
@@ -79,7 +79,7 @@ Git is mandatory, everything else is optional.
 - Python:
   - [[https://www.python.org/][Python]]
   - [[https://pipenv.pypa.io/][Pipenv]]
-  - [[https://github.com/palantir/python-language-server][Python Language Server]]
+  - [[https://github.com/python-lsp/python-lsp-server][Python LSP Server]]
 - Scheme: [[https://www.gnu.org/software/guile/][Guile]]
 - SQL: [[https://www.postgresql.org/][PostgreSQL]]
 - TeX, Org and Markdown:
@@ -153,7 +153,7 @@ To install dependencies on [[https://www.archlinux.org/][Arch Linux]], run:
 
   ## Python
   pacman -S python python-pipenv
-  pacman -S python-language-server python-rope python-pyflakes
+  pacman -S python-lsp-server python-rope python-pyflakes
 
   ## Scheme
   pacman -S guile
