[emacs] Style transient mode line

--- a/emacs.org
+++ b/emacs.org
@@ -2838,6 +2838,26 @@ VC is a placeholder.
                   (show-lines   . t))))
     (setq magit-blame-echo-style 'line))
 
+  (use-package transient
+    :defer t
+    :preface
+    (defvar koek-ml/transient-format)
+
+    (defvar koek-tsnt/old-mode-line-format nil)
+
+    (defun koek-tsnt/setup-mode-line ()
+      (when (featurep 'koek-ml)
+        (if koek-ml-mode
+            (progn
+              (unless (eq transient-mode-line-format koek-ml/transient-format)
+                (setq koek-tsnt/old-mode-line-format transient-mode-line-format))
+              (setq transient-mode-line-format koek-ml/transient-format))
+          (setq transient-mode-line-format koek-tsnt/old-mode-line-format)
+          (setq koek-tsnt/old-mode-line-format nil))))
+    :config
+    (koek-tsnt/setup-mode-line)
+    (add-hook 'koek-ml-mode-hook #'koek-tsnt/setup-mode-line))
+
   (use-package git-commit
     :defer t
     :preface
@@ -8999,6 +9019,19 @@ can load moody.
       koek-ml/id koek-ml/state keycast-marker
       koek-ml/position koek-ml/pdf koek-ml/exwm-input koek-ml/input
       koek-ml/flymake koek-ml/vc koek-ml/task koek-ml/modes))
+
+  ;;;; transient
+
+  (defvar koek-ml/transient-format
+    '(" "
+      (:eval
+       (moody-tab
+        (propertize (koek-subr/construct-earmuffed-name
+                     "transient" mode-line-buffer-identification)
+                    'face 'mode-line-buffer-id)))
+      koek-ml/large-separator
+      koek-ml/modes))
+  (put 'koek-ml/transient-format 'risky-local-variable t)
 
   ;;;; ediff
 
