[emacs] Tweak title Reddit news feeds

--- a/emacs.org
+++ b/emacs.org
@@ -6548,7 +6548,7 @@ Configure elfeed afterwards.
         (let ((args
                (pcase feed
                  (`(,title reddit month ,id . ,tags)
-                  `(,(concat title " (Reddit - Month)")
+                  `(,(concat title " (Reddit Month)")
                     ,(format "https://www.reddit.com/r/%s/top.rss?t=month" id)
                     post ,@tags))
                  (`(,title reddit ,id . ,tags)
