--- a/README.org
+++ b/README.org
@@ -32,8 +32,8 @@ from the changed file and restart the changed application or re-login.
 Git is mandatory, everything else is optional.
 
 - General:
-  - [[https://github.com/BurntSushi/ripgrep][ripgrep]]
   - [[https://git-scm.com/][Git]]
+  - [[https://github.com/BurntSushi/ripgrep][ripgrep]]
   - [[https://hunspell.github.io/][Hunspell]]
   - [[https://x.org/][xprop]] (set GTK theme variant)
   - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro]] or [[https://typeof.net/Iosevka/][Iosevka]] (fixed pitch font)
@@ -91,7 +91,7 @@ To install dependencies on [[https://www.archlinux.org/][Arch Linux]], run:
 
 #+BEGIN_SRC sh
   ## General
-  pacman -S ripgrep git hunspell hunspell-en_us xorg-xprop ttf-ibm-plex
+  pacman -S git ripgrep hunspell hunspell-en_us xorg-xprop ttf-ibm-plex
   pacman -S ttc-iosevka
   # Install PragmataPro from source
 
