--- a/README.org
+++ b/README.org
@@ -91,13 +91,11 @@ To install dependencies on [[https://www.archlinux.org/][Arch Linux]], run:
 
 #+BEGIN_SRC sh
   ## General
-  pacman -S git ripgrep hunspell hunspell-en_us xorg-xprop ttf-ibm-plex
-  pacman -S ttc-iosevka
+  pacman -S git ripgrep hunspell hunspell-en_us xorg-xprop ttf-ibm-plex ttc-iosevka
   # Install PragmataPro from source
 
   ## X window manager
-  pacman -S xorg-xset picom xsettingsd xorg-xsetroot unclutter argyllcms
-  pacman -S xf86-input-wacom
+  pacman -S xorg-xset picom xsettingsd xorg-xsetroot unclutter argyllcms xf86-input-wacom
   # Install exwm-gdm from source
 
   ## Terminal emulator
@@ -152,8 +150,7 @@ To install dependencies on [[https://www.archlinux.org/][Arch Linux]], run:
   pacman -S openscad
 
   ## Python
-  pacman -S python python-pipenv
-  pacman -S python-lsp-server python-rope python-pyflakes
+  pacman -S python python-pipenv python-lsp-server python-rope python-pyflakes
 
   ## Scheme
   pacman -S guile
