[emacs] Fix indentation

--- a/emacs.org
+++ b/emacs.org
@@ -1546,7 +1546,9 @@ steps.
   horizontally."
     (let* ((width (nth 2 (frame-monitor-geometry)))
            (step (/ width koek-wind/n-hor-steps))
-           (delta (if shrink (- step) step)))
+           (delta (if shrink
+                      (- step)
+                    step)))
       (window-resize nil delta (not vertical) nil 'pixelwise)))
 
   (defun koek-wind/grow (&optional arg)
@@ -8535,8 +8537,9 @@ current theme.
   operandi or vivendi."
       (pcase-let* ((koek-thm/enable-hook nil) ; Dynamic variable
                    (themes '(modus-operandi modus-vivendi))
-                   (`(,new ,old)
-                    (if (eq variant 'operandi) themes (reverse themes))))
+                   (`(,new ,old) (if (eq variant 'operandi)
+                                     themes
+                                   (reverse themes))))
         (when (custom-theme-enabled-p old)
           (disable-theme old))
         (unless (custom-theme-p new)
