--- a/emacs.org
+++ b/emacs.org
@@ -1796,10 +1796,10 @@ buffers.
           indium-repl-mode inferior-octave-mode inferior-python-mode
           geiser-repl-mode sql-interactive-mode))
   (setq koek-buff/shell-names
-        (rx line-start "*" (zero-or-one (one-or-more (not "*")) "-")
+        (rx line-start
             ;; When new buffer, major mode is set after calling
             ;; `display-buffer'
-            (or "vterm*" "eshell*")))
+            (or "*vterm" "*eshell")))
 
   ;; Web buffers
   (setq koek-buff/web-modes '(eww-mode elpher-mode))
@@ -2744,6 +2744,11 @@ Move deleted files to trash.
       (if (bound-and-true-p recentf-mode)
           (recentf-include-p (project-root project))
         t))
+
+    (define-advice project-prefixed-buffer-name
+        (:override (mode) koek-proj/construct-project-buffer-name)
+      (koek-subr/construct-earmuffed-name
+       mode (koek-proj/determine-name default-directory)))
 
     (defun koek-proj/magit-status ()
       "Launch magit in current project.
