[emacs] Tweak koek-word/previous

--- a/emacs.org
+++ b/emacs.org
@@ -3313,9 +3313,7 @@ Unlike ~forward-to-word~ and ~backward-to-word~, ~koek-word/next-word~ and
   Optional ARG is an integer and defaults to one.  When ARG is
   negative, move point to beginning of next word."
     (interactive "p")
-    (unless arg
-      (setq arg 1))
-    (koek-word/next (- arg)))
+    (koek-word/next (- (or arg 1))))
 
   (bind-keys
    ("M-n" . koek-word/next)
