[emacs] Prefer string-match to string-match-p

--- a/emacs.org
+++ b/emacs.org
@@ -5763,7 +5763,7 @@ Inherit Clojure snippets.
   # --
   # -*- mode: snippet; -*-
   # name: ${1:Snippet name}
-  # key: ${2:`(let ((buffer-name (buffer-name))) (if (or (string-equal buffer-name yas-new-snippet-buffer-name) (string-match-p (rx "*org-src: " (one-or-more not-newline) "*") buffer-name)) "key" buffer-name))`}
+  # key: ${2:`(let ((buffer-name (buffer-name))) (if (or (string-equal buffer-name yas-new-snippet-buffer-name) (string-match (rx "*org-src: " (one-or-more not-newline) "*") buffer-name)) "key" buffer-name))`}
   # --
   $0
 #+END_SRC
@@ -6190,10 +6190,10 @@ For shell configuration, see [[file:dotfiles.org::*Bash][Bash]].
       "Rewrite Reddit to Reddit mobile.
   URL is a string, the URL to rewrite."
       (let ((parsed (url-generic-parse-url url)))
-        (when (string-match-p (rx line-start
-                                  (zero-or-one (or "www" "old") ".") "reddit.com"
-                                  line-end)
-                              (url-host parsed))
+        (when (string-match (rx line-start
+                                (zero-or-one (or "www" "old") ".") "reddit.com"
+                                line-end)
+                            (url-host parsed))
           (setf (url-host parsed) "i.reddit.com")
           (url-recreate-url parsed))))
 
