[emacs] Remove density from PDF link draw command

--- a/emacs.org
+++ b/emacs.org
@@ -6831,8 +6831,7 @@ Gnus is a placeholder.
               (list name (face-attribute 'pdf-links-read-link name nil 'default)))
             '(:family :width :weight :slant))))
       (setq pdf-links-read-link-convert-commands
-            `("-density"    "96"
-              "-family"     ,(plist-get spec :family)
+            `("-family"     ,(plist-get spec :family)
               "-stretch"    ,(thread-last (plist-get spec :width)
                                symbol-name
                                capitalize
