[emacs] Prefer featurep to boundp

--- a/emacs.org
+++ b/emacs.org
@@ -7186,7 +7186,7 @@ Stavrou)]].
 
   (defun prepcast-prep-moody ()
     "Prepare moody for screencasting."
-    (when (boundp 'moody-mode-line-height)
+    (when (featurep 'moody)
       (let ((height moody-mode-line-height))
         (setq moody-mode-line-height (round (* height prepcast-scale)))
         (lambda ()
@@ -7197,7 +7197,7 @@ Stavrou)]].
 
   (defun prepcast-prep-keycast ()
     "Prepare keycast for screencasting."
-    (when (fboundp 'keycast-mode)
+    (when (featurep'keycast)
       (unless keycast-mode
         (keycast-mode 1)
         (lambda ()
@@ -8794,7 +8794,7 @@ can load moody.
 
   (defvar koek-ml/exwm-workspaces
     '(:eval
-      (when (and (boundp 'exwm-workspace-current-index) (moody-window-active-p))
+      (when (and (featurep 'exwm-workspace) (moody-window-active-p))
         (let ((workspaces (koek-ml/get-exwm-workspaces)))
           (when (> (length workspaces) 1)
             `(,(moody-ribbon
@@ -8851,7 +8851,7 @@ can load moody.
 
   (defvar koek-ml/id
     '(:eval
-      (let ((prefix (when (and (fboundp 'project-current)
+      (let ((prefix (when (and (featurep 'project)
                                (derived-mode-p 'prog-mode 'conf-mode))
                       (koek-proj/get-name))))
         (moody-tab
@@ -8917,7 +8917,7 @@ can load moody.
 
   (defvar koek-ml/exwm-input
     '(:eval
-      (when (and (boundp 'exwm--input-mode) (eq exwm--input-mode 'char-mode)
+      (when (and (featurep 'exwm-core) (eq exwm--input-mode 'char-mode)
                  (moody-window-active-p))
         `("" koek-ml/separator
           ,(moody-ribbon "Char" nil 'up))))
@@ -9035,8 +9035,7 @@ can load moody.
 
   (defvar koek-ml/task
     '(:eval
-      (when (and (fboundp 'org-clock-is-active) (org-clock-is-active)
-                 (moody-window-active-p))
+      (when (and (featurep 'org) (org-clocking-buffer) (moody-window-active-p))
         `("" koek-ml/separator
           ,(org-duration-from-minutes (org-clock-get-clocked-time)))))
     "Mode line construct for task.")
