[emacs] Prefer null to identity

--- a/emacs.org
+++ b/emacs.org
@@ -7212,7 +7212,7 @@ Stavrou)]].
           (setq prepcast--unprep-fs
                 (thread-last prepcast-prep-fs
                   (mapcar #'funcall)
-                  (seq-filter #'identity))))
+                  (seq-remove #'null))))
       (mapc #'funcall prepcast--unprep-fs)
       (setq prepcast--unprep-fs nil)))
 
