--- a/emacs.org
+++ b/emacs.org
@@ -346,8 +346,7 @@ For org configuration, see [[*Org][Org]].
     (setq exwm-input-global-keys
           (mapcar (pcase-lambda (`(,key . ,command))
                     (cons (kbd key) command))
-                  '(("s-s" . exwm-input-toggle-keyboard)
-                    ("s-0" . koek-wm/switch-workspace-0)
+                  '(("s-0" . koek-wm/switch-workspace-0)
                     ("s-1" . koek-wm/switch-workspace-1)
                     ("s-2" . koek-wm/switch-workspace-2)
                     ("s-3" . koek-wm/switch-workspace-3)
@@ -358,11 +357,12 @@ For org configuration, see [[*Org][Org]].
                     ("s-8" . koek-wm/switch-workspace-8)
                     ("s-9" . koek-wm/switch-workspace-9)
                     ("s-w" . koek-wm/switch-previous-workspace)
-                    ("s-x" . counsel-linux-app)
+                    ("<f11>" . exwm-layout-toggle-fullscreen)
                     ("s-q" . bury-buffer)
                     ("s-d" . kill-current-buffer)
-                    ("<f11>" . exwm-layout-toggle-fullscreen)
-                    ("s-C-f" . koek-wm/launch-firefox))))
+                    ("s-x" . counsel-linux-app)
+                    ("s-C-f" . koek-wm/launch-firefox)
+                    ("s-s" . exwm-input-toggle-keyboard))))
 
     ;; Translate Emacs to non Emacs keybindings in line mode
     (setq exwm-input-simulation-keys
