[emacs] Quote symbol in docstring

--- a/emacs.org
+++ b/emacs.org
@@ -3061,7 +3061,7 @@ VC is a placeholder.
       (get-text-property (point) 'link))
 
     (defun koek-lh/dictionary-mode-p ()
-      "Return whether current major mode is derived from dictionary-mode."
+      "Return whether current major mode is derived from `dictionary-mode'."
       (derived-mode-p 'dictionary-mode))
 
     (defun koek-lh/open-dictionary-link ()
